--- a/config.org
+++ b/config.org
@@ -2034,28 +2034,30 @@ With the package installed, we are ready to define ~org-agenda-custom-commands~ 
                                (todo priority-down category-keep)
                                (tags priority-down category-keep)
                                (search category-keep)))
-(org-super-agenda-groups '((:name "Today"
-                            :and (:date today
-                                  :not (:todo "IDEA")))
-                           (:name "Next Items"
-                            :todo "NEXT")
-                           (:name "Important"
-                            :priority "A")
-                           (:name "Incoming Events"
-                            :and (:todo "EVENT"
-                                  :not (:date today)))
-                           (:name "Scheduled"
-                            :and (:priority<= "B"
-                                  :scheduled future))
-                           (:name "Candidates"
-                            :and (:priority "B"
-                                  :not  (:todo ("EVENT" "WAIT"))))
-                           (:name "Active projects"
-                            :todo "PROJ")
-                           (:name "Ideas"
-                            :todo "IDEA")
-                           (:name "In hold"
-                            :todo "WAIT"))))
+
+(org-super-agenda-groups      '((:name "Today"
+                                 :and  (:date today :not (:todo "IDEA")))
+                                (:name "Next Items"
+                                 :and (:todo "NEXT" :not (:tag ("consume"))))
+                                (:name "Important"
+                                 :priority "A")
+                                (:name "Scheduled"
+                                 :and (:priority<= "B"
+                                       :scheduled future))
+                                (:name "Incoming Events"
+                                 :discard (:date today)
+                                 :and (:todo "EVENT"))
+                                (:name "Candidates"
+                                 :and (:priority "B"
+                                       :discard  (:todo ("EVENT" "WAIT"))))
+                                (:name "Active projects"
+                                 :todo "PROJ")
+                                (:name "Ideas"
+                                 :and (:not (:tag ("consume")) :todo "IDEA"))
+                                (:name "In hold"
+                                 :todo "WAIT")
+                                (:name "Consumerism"
+                                 :tag  ("consume")))))
 #+end_src
 
 There are a few clashes between ~evil-org-agenda-mode-map~ and ~org-super-agenda-header-map~. To remove them, we simply override the latter keymap, after loading both ~evil-org-agenda~ and ~org-super-agenda~.
