bug(consult-company): Lazy loading ensured.

--- a/config.org
+++ b/config.org
@@ -1362,7 +1362,7 @@ Begin giving candidates as soon as something is typed. This can be slow sometime
         company-idle-delay 0.05))
 #+end_src
 
-**** consult-company
+*** consult-company
 
 A _consult_ing-read interface for ~company-mode~.
 
@@ -1370,12 +1370,17 @@ A _consult_ing-read interface for ~company-mode~.
 (package! consult-company)
 #+end_src
 
-This package remaps ~completion-at-point~ to use =consult='s interface instead, bind to =C-M-i=.
+First, let's ensure the package is only loaded on demand, by creating a ~consult-company~ auto-command.
 
 #+begin_src elisp
 (use-package! consult-company
-  :after (company consult)
-  :init
+  :commands consult-company)
+#+end_src
+
+This package remaps ~completion-at-point~ to use =consult='s interface. Keybind to =C-M-i=.
+
+#+begin_src elisp
+(after! (company consult)
   (map! :g "C-M-i" #'consult-company))
 #+end_src
 
